tests/test129.rael
:0do_blame ?= routine() {
    blame "haha"
}

log {} + :0do_blame()
